# matter-js-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  matter_wasm_bg.wasm
crates/core/: Cargo.toml
crates/core/src/: body.rs  collision.rs  constraint.rs  engine.rs  factory.rs  geometry.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
demo/: index.html  matter_wasm.js
src/: body.rs  collision.rs  composite.rs  constraint.rs  engine.rs  factory.rs  geometry.rs
testdata/: body.json  collision.json  constraint.json  engine.json  factory.json  generate.js  geometry.json  package-lock.json  package.json
wasm/: Cargo.toml
wasm/src/: lib.rs
