[workspace]
members = [".", "wasm"]
resolver = "3"

[workspace.package]
version = "0.1.0"

[package]
name = "matter-core"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = "2"

[dev-dependencies]
serde_json = "1"
